--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="code-img" src="images/web-design.PNG" alt="web design and development" width="250" height="250"></td>
+          <img class="code-img" src="images/web-design.png" alt="web design and development" width="250" height="250"></td>
           <h3>Desing & Development</h3>
           <p>I started learning to code in 2015 when I went to my first University. Over time, I have gained experience designing and developing web applications. </p>
         </div>
